--- a/index.html
+++ b/index.html
@@ -11,17 +11,12 @@
 <h2>I am a Web developer</h2>
 <hr>
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-<a href="/2.4 Movie Ranking Project/index.html">Movie Ranking Project</a>
+<h3><a href="/2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
 <br>
 <br>
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
 <img src="../4.3 HTML Porfolio Project/assets/images/movie-ranking.png" alt="Movie Ranking Project" width="200"/><br>
 
-<!-- TODO 4: Add titles/subtitles etc. -->
-<!-- TODO 5: Add a link to the project pages -->
-
-<a href="/4.1+Webpages/4.3 HTML Porfolio Project/public/birthday-invite.html">My Birthday invite</a><br>
+<h3><a href="/4.1+Webpages/4.3 HTML Porfolio Project/public/birthday-invite.html">My Birthday invite</a><br></h3>
 
 
 <img src="/my birthday.png" alt="My birthday invite" width="200"/>
@@ -30,3 +25,4 @@
 <br>
 <a href="/4.1+Webpages/4.3 HTML Porfolio Project/public/about.html">About Me</a>
 </body>
+</html>
